--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">BlackBoardApp</string>
+
+    <!-- インポート・エクスポート ファイル -->
+    <string name="io_file_01">storageModel1.obj</string>
+    <string name="io_file_02">storageModel2.obj</string>
+    <string name="io_file_03">storageModel3.obj</string>
+    <string name="io_file_04">storageModel4.obj</string>
+    <string name="io_file_05">storageModel5.obj</string>
+    <string name="io_file_06">storageModel6.obj</string>
+    <string name="io_file_07">storageModel7.obj</string>
+    <string name="io_file_08">storageModel8.obj</string>
+    <string name="io_file_09">storageModel9.obj</string>
+    <string name="io_file_10">storageModel10.obj</string>
 </resources>
